--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ body {
   
  #profile-name{
     text-align: center;
- }#header {
+ }
+ 
+ #header {
     width: 100%;
     height: 50px;
     line-height: 50px;
